# DataSince

./: README.md  main.py  pyproject.toml
docs/: index.md  test.md
modules/: csv.py  data.py  gradient_descent.py  linear_regression.py
notebooks/: 2 week.ipynb  3d gradient decent.ipynb  KNN Demo.ipynb  KNN main.ipynb  KNN.ipynb  Notsimpledatatypes 20.07.2025.ipynb  Pandas.ipynb  Untitled0.ipynb  Untitled2.ipynb  gradient decent.ipynb  visualization.ipynb  work in pairs.ipynb
