[build-system]
requires = ["numpy"]

[project]
name = "ds-base"
version = "0.1.0"
description = "Some Data Since references using python pandas/numpy
withOUT DEPENDENCIES"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Alexey Ivanov", email = "asboba2101@gmail.com"},
]
dependencies = []
requires-python = ">=3.7"
